--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/parsimmon": "^1.10.3",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
