Jestの設定を変更

--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "test:watch": "jest --watch"
   },
   "jest": {
-    "roots": [
-      "test"
-    ],
     "testMatch": [
-      "**/*.(ts|js)"
+      "**/test/**/*.(ts|js)"
     ],
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
