--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test:watch": "jest --watch",
     "prepare": "tsc"
   },
+  "eslintConfig": {
+    "extends": "ziphil"
+  },
   "jest": {
     "testMatch": [
       "**/test/**/*.(ts|js)"
@@ -26,11 +29,16 @@
     "@types/codemirror": "0.0.98",
     "@types/jest": "^26.0.14",
     "@types/parsimmon": "^1.10.3",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-ziphil": "^1.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.8",
     "jest": "^26.4.2",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
-    "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
