リンターの設定などを変更

--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "lint": "eslint source/**/*.ts test/**/*.ts",
+    "lint:fix": "eslint --fix source/**/*.ts test/**/*.ts",
     "prepare": "tsc"
   },
   "eslintConfig": {
     "extends": "ziphil",
     "rules": {
       "@typescript-eslint/quotes": "off",
-      "import/order": "off"
+      "import/order": "off",
+      "prefer-const": [
+        "warn",
+        {
+          "destructuring": "all"
+        }
+      ]
     }
   },
   "jest": {
@@ -34,12 +42,16 @@
     "@types/codemirror": "0.0.98",
     "@types/jest": "^26.0.14",
     "@types/parsimmon": "^1.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-ziphil": "^1.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.7.8",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-config-ziphil": "^1.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
